Add example for per-party layout

--- a/templates_2/templates/layouts/mylayout.html
+++ b/templates_2/templates/layouts/mylayout.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>Layout</title>
+    <title>my Layout</title>
 
   </head>
   <body>
-	<h1> This is the global layout </h1>
+	<h1>This is the layout for the /my/ and /my/other routes only </h1>
 	<br/>
     <!-- Render the current template here -->
     {{ yield }}
