--- a/bind_form/templates/form.html
+++ b/bind_form/templates/form.html
@@ -3,19 +3,17 @@
 <meta charset="utf-8">
 </head>
 <body>
-<form action="/form_action" method="post">
-<input type="text" name="Username" />
-<br/>
-<input type="text" name="Mail" /><br/>
-<select multiple="multiple" name="mydata">
-<option value='one'>One</option>
-<option value='two'>Two</option>
-<option value='three'>Three</option>
-<option value='four'>Four</option>
-</select>
-<hr/>
-<input type="submit" value="Send data" />
+	<form action="/form_action" method="post">
+		<input type="text" name="Username" /> <br /> <input type="text"
+			name="Mail" /><br /> <select multiple="multiple" name="mydata">
+			<option value='one'>One</option>
+			<option value='two'>Two</option>
+			<option value='three'>Three</option>
+			<option value='four'>Four</option>
+		</select>
+		<hr />
+		<input type="submit" value="Send data" />
 
-</form>
+	</form>
 </body>
 </html>
