--- a/plugin_oauth_oauth2/templates/index.html
+++ b/plugin_oauth_oauth2/templates/index.html
@@ -1,3 +1,6 @@
 {{range $key,$value:=.Providers}}
-    <p><a href="{{ url "oauth" $value}}">Log in with {{index $.ProvidersMap $value}}</a></p>
+<p>
+	<a href="{{ url "oauth" $value}}">Log in with {{index
+		$.ProvidersMap $value}}</a>
+</p>
 {{end}}
