--- a/plugin_oauth_oauth2/templates/user.html
+++ b/plugin_oauth_oauth2/templates/user.html
@@ -2,7 +2,9 @@
 <p>Email: {{.Email}}</p>
 <p>NickName: {{.NickName}}</p>
 <p>Location: {{.Location}}</p>
-<p>AvatarURL: {{.AvatarURL}} <img src="{{.AvatarURL}}"></p>
+<p>
+	AvatarURL: {{.AvatarURL}} <img src="{{.AvatarURL}}">
+</p>
 <p>Description: {{.Description}}</p>
 <p>UserID: {{.UserID}}</p>
 <p>AccessToken: {{.AccessToken}}</p>
