--- a/template_engines/template_django_1/templates/mypage.html
+++ b/template_engines/template_django_1/templates/mypage.html
@@ -1,9 +1,11 @@
 <html>
-  <head>
-    <title>Hello Django from Iris</title>
+<head>
+<title>Hello Django from Iris</title>
 
-  </head>
-  <body>
-   {% if is_admin %}<p>{{username}} is an admin!</p>{% endif %}
-  </body>
+</head>
+<body>
+	{% if is_admin %}
+	<p>{{username}} is an admin!</p>
+	{% endif %}
+</body>
 </html>
