--- a/template_engines/template_handlebars_1/templates/home.html
+++ b/template_engines/template_handlebars_1/templates/home.html
@@ -1,12 +1,9 @@
-<div style="background-color:black;color:white">
+<div style="background-color: black; color: white">
 
-Name: {{boldme Name}} <br/>
-Type: {{boldme Type}} <br/>
-Path: {{boldme Path}} <br/>
-<hr/>
+	Name: {{boldme Name}} <br /> Type: {{boldme Type}} <br /> Path:
+	{{boldme Path}} <br />
+	<hr />
 
-The partial is:
-
-{{ render "partials/home_partial.html"}}
+	The partial is: {{ render "partials/home_partial.html"}}
 
 </div>
