--- a/template_engines/template_handlebars_1/templates/partials/home_partial.html
+++ b/template_engines/template_handlebars_1/templates/partials/home_partial.html
@@ -1,1 +1,3 @@
-<div style="background-color:white;color:red"> <h1> Home's' Partial here!! </h1> </div>
+<div style="background-color: white; color: red">
+	<h1>Home's' Partial here!!</h1>
+</div>
