--- a/websocket_unlimited_servers/templates/client.html
+++ b/websocket_unlimited_servers/templates/client.html
@@ -1,11 +1,12 @@
 <html>
 
 <head>
-	<title>{{ .Title}}</title>
+<title>{{ .Title}}</title>
 </head>
 
 <body>
-	<div id="messages" style="border-width:1px;border-style:solid;height:400px;width:375px;">
+	<div id="messages"
+		style="border-width: 1px; border-style: solid; height: 400px; width: 375px;">
 
 	</div>
 	<input type="text" id="messageTxt" />
